<resources>
    <string name="app_name">口红娃娃机</string>
    <string name="user_address">收货地址</string>
    <string name="add_address">新增收货地址</string>
    <string name="integar_store">积分商城</string>
    <string name="net_error">网络请求失败</string>
    <string name="device_error">机器出现故障</string>
    <string name="login_weixin">微信登录</string>
    <string name="network_error">请检查网络</string>
    <string name="data_error">数据异常</string>

    <string name="consignee">收货人</string>
    <string name="hint_consignee">请输入收货人姓名</string>
    <string name="contact_way">联系方式</string>
    <string name="hint_contact_way">请输入联系方式</string>
    <string name="city">省/市/区/县</string>
    <string name="hint">请选择地址</string>
    <string name="consignee_address">请选择地址</string>
    <string name="hint_consignee_address">请输入收货人详细地址</string>
    <string name="setting_default">设置为默认</string>

    <string name="data_empty_error">请先选择数据</string>
    <string name="record_error">暂无该视频</string>
    <string name="about_us">关于我们</string>
    <string name="game_help">游戏帮助</string>
    <string name="yaoqing_me">邀请奖励</string>
    <string name="yaoqing_input">输入邀请码</string>
    <string name="feadback">问题反馈</string>
    <string name="logout">退出登录</string>
    <string name="wechat_login">微信登录</string>
    <string name="play_num">人在房间</string>
    <string name="setting">设置</string>
    <string name="charge">充值</string>
    <string name="select_payway">请选择支付方式</string>
    <string name="userCenter">个人中心</string>
    <string name="message">消息通知</string>
    <string name="customer_service">客服小爪来帮助您</string>
    <string name="set_helps">游戏帮助</string>
    <string name="set_yaoqing">邀请奖励</string>
    <string name="set_yaoqingma">输入邀请码</string>
    <string name="set_bg_music">背景音乐</string>
    <string name="set_bg_yinxiao">背景音效</string>
    <string name="set_feedback">问题反馈</string>
    <string name="set_update">当前版本</string>
    <string name="set_about">关于我们</string>
    <string name="coming">来了</string>
    <string name="agree">确定</string>
    <string name="disagree">取消</string>
    <string name="edit">编辑</string>
    <string name="shouhuo">收货地址</string>
    <string name="shouhuokong">暂未填写</string>
    <string name="shouhuoren">收货人</string>
    <string name="lianxifangshi">联系方式</string>
    <string name="keduihuan">可兑换金币</string>
    <string name="zhuaqu_record">抓取记录</string>
    <string name="duihuan_record">兑换记录</string>
    <string name="intager_record">积分记录</string>
    <string name="tv_extract">提取</string>
    <string name="tv_exchange">兑换</string>

    <string name="jinbi_record">金币记录</string>
    <string name="jinbi_balance">金币余额</string>
    <string name="zhuazhong_num">抓中次数</string>
    <string name="charge_cneter">充值中心</string>
    <string name="send">发送</string>
    <string name="xieyi">用户协议与隐私条款</string>
    <string name="empty_tip">内容不能为空</string>
    <string name="mobile_tip">请填写正确的手机号</string>
    <string name="hint_text">说点什么吧</string>
    <string name="pay_way_select">请选择支付方式</string>
    <string name="my_balance">我的金币余额</string>
    <string name="pay_weixin">微信支付</string>
    <string name="pay_zfb">支付宝</string>
    <string name="game_coin">金币</string>
    <string name="tip_shoujia">售价</string>
    <string name="tip_yuan">元</string>
    <string name="check_all">全选</string>
    <string name="zq_all_num">总共抓住次数</string>
    <string name="playing">游戏中……</string>
    <string name="is_connecting">正在连接娃娃机……</string>
    <string name="play_no_tips">据说换个姿势，手气会更好</string>
    <string name="play_yes_tips">您的手气真的是太好了，运气爆棚啊</string>
    <string name="play_zhuazhu_tips">果真不负众望，真的抓到了！</string>
    <string name="play_meizhuazhu_tips">很遗憾，真的没抓到！</string>
    <!-- <string name="agora_appid">f4b66e7837934e7aaaecd05cb38926da</string>-->
    <string name="agora_appid">33825c2e79934e2791c4e5ff53714b81</string>
    <string name="wechat_qr">扫一扫上面的二维码图案, 加我微信\n\n客服时间: 周一到周五早上10点-晚7点</string>
    <string name="tv_all">全部</string>
    <string name="tv_invite">邀请</string>
    <string name="tv_integral">积分商城</string>
    <string name="tv_charge">充值</string>
    <string name="tv_playing">游戏中</string>
    <string name="tv_free">空闲中</string>
    <string name="wuqu_title">奖品兑换</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="addresser">收货人</string>
</resources>
