<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bg_color"
    tools:context="com.deerlive.zhuawawa.activity.AddAddressActivity">
    <include layout="@layout/toolbar_item"/>
    <LinearLayout
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:background="@color/white"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <TextView
                android:id="@+id/user_Name"
                android:textSize="16sp"
                android:textColor="@color/text_black"
                android:layout_gravity="center_vertical"
                android:text="收货人    "
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <EditText
                android:layout_marginLeft="20dp"
                android:id="@+id/ed_UserName"
                android:background="@null"
                android:textSize="15sp"
                android:layout_gravity="center_vertical"
                android:hint="@string/hint_consignee"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider"
            android:background="@color/e_white"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <TextView
                android:id="@+id/user_Contact"
                android:textSize="16sp"
                android:textColor="@color/text_black"
                android:layout_gravity="center_vertical"
                android:text="@string/contact_way"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <EditText
                android:layout_marginLeft="20dp"
                android:layout_gravity="center_vertical"
                android:hint="@string/hint_contact_way"
                android:id="@+id/ed_userName"
                android:background="@null"
                android:textSize="15sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider"
            android:background="@color/e_white"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <TextView
                android:layout_centerVertical="true"
                android:id="@+id/user_city"
                android:textSize="16sp"
                android:textColor="@color/text_black"
                android:layout_gravity="center_vertical"
                android:text="@string/city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <ImageView
                android:id="@+id/iv_arrow"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/iv_right_arrow"/>
            <TextView
                android:textSize="15sp"
                android:textColor="@color/text_black"
                android:layout_marginRight="10dp"
                android:text="@string/consignee_address"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@id/iv_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider"
            android:background="@color/e_white"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <TextView
                android:id="@+id/user_address"
                android:textSize="16sp"
                android:textColor="@color/text_black"
                android:layout_gravity="center_vertical"
                android:text="@string/user_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <EditText
                android:layout_marginLeft="20dp"
                android:layout_gravity="center_vertical"
                android:hint="@string/hint_consignee_address"
                android:id="@+id/ed_address"
                android:background="@null"
                android:textSize="15sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider"
            android:background="@color/e_white"/>

    </LinearLayout>
    <com.deerlive.zhuawawa.view.supertextview.SuperTextView
        android:id="@+id/setting_default"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:sDividerLineHeight="1dp"
        app:sDividerLineType="none"
        app:sLeftTextColor="@color/text_color"
        app:sRightViewType="switchBtn"
        app:sSwitchIsChecked="true"
        app:sThumbResource="@drawable/thumb"
        app:sTrackResource="@drawable/track"
        app:sLeftTextSize="16dp"
        app:sLeftTextString="@string/setting_default" />
    <Button
        android:layout_marginTop="50dp"
        android:layout_marginLeft="20dp"
        android:text="保存"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:layout_marginRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_shape_bg"
        />
</LinearLayout>
